# IgneousEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  cpp.hint
app/: CMakeLists.txt
app/scripts/: demo.lua
app/src/: application.cpp  lua_scripts.h
engine/: CMakeLists.txt  engine.h
engine/models/: alien.mtl
engine/shaders/: point_light.vert  simple_shader.frag
engine/src/: application.cpp  application.h  basic_app.cpp  basic_app.h  bve_device.cpp  bve_device.h  bve_imgui.cpp  bve_imgui.h  bve_model.cpp  bve_pipeline.cpp  bve_pipeline.h  bve_swap_chain.cpp  bve_utils.h  bve_window.cpp  defines.h  entity_component_registry.h  entry.h  event.h  input_controller.cpp  log.cpp  log.h  master_renderer.cpp  master_renderer.h  pch.h  vulkan_buffer.cpp  vulkan_buffer.h  vulkan_descriptors.cpp  vulkan_descriptors.h  vulkan_renderer.cpp  vulkan_renderer.h
engine/src/components/: components.h
engine/src/core/: key_codes.h
engine/src/core/events/: event.h  key_events.h
engine/src/systems/: camera_system.cpp  movement_system.cpp  point_light_render_system.cpp  point_light_render_system.h  render_system.cpp
shaders/: point_light.frag  point_light.vert  simple_shader.frag  simple_shader.vert
src/: basic_app.cpp  basic_app.h  bve_device.cpp  bve_device.h  bve_imgui.cpp  bve_imgui.h  bve_model.cpp  bve_model.h  bve_pipeline.cpp  bve_pipeline.h  bve_swap_chain.cpp  bve_swap_chain.h  bve_utils.h  bve_window.cpp  bve_window.h  camera.cpp  camera.h  camera_system.cpp  camera_system.h  component_registry.h  entity_component_registry.h  entity_component_view.h  entity_manager.cpp  entity_manager.h  frame_info.h  input_controller.cpp  input_controller.h  main.cpp  master_renderer.cpp  master_renderer.h  movement_system.cpp  movement_system.h  render_system.cpp  render_system.h  renderer.cpp  renderer.h  vulkan_buffer.cpp  vulkan_buffer.h  vulkan_descriptors.cpp  vulkan_descriptors.h  (+2 more)
src/components/: components.h
src/systems/: camera_system.cpp  camera_system.h  movement_system.h  point_light_render_system.cpp  point_light_render_system.h  render_system.cpp  render_system.h
src/util/: sparse_set.h
